media/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: media
  labels:
    app.kubernetes.io/name: nextcloud
  annotations:
    operator.1password.io/item-path: "vaults/HomeLab/items/nextclouddb"
    operator.1password.io/item-name: "ncdb"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
    spec:
      containers:
        - name: nextcloud
          image: library/nextcloud:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud
      volumes:
        - name: nextcloud
          persistentVolumeClaim:
            claimName: nextcloud
