media/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: media
  labels:
    app.kubernetes.io/name: nextcloud
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx-internal
  rules:
    - host: "nc.skj.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
  tls:
    - hosts:
        - nc.skj.dev
      secretName: nc-skj-dev-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ext
  namespace: media
  labels:
    app.kubernetes.io/name: nextcloud
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  ingressClassName: nginx-external
  rules:
    - host: "nc.skj.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
  tls:
    - hosts:
        - nc.skj.dev
      secretName: nc-skj-dev-cert
